# AI-NewsLetter

./: .gitignore  .railwayignore  FORCE_REDEPLOY.txt  FRONTEND_DEPLOY.md  Pipfile  README.md  next.config.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway-frontend.toml  railway.toml  requirements.txt  samconfig.toml  serverless.yml  start.js  tailwind.config.ts  template.yaml  vercel.json
.github/workflows/: deploy.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
api/: index.py  main.py  minimal.py
app/: globals.css  layout.tsx  page.tsx
backend-temp/api/: simple.py
components/: EditorModal.tsx  FeedPicker.tsx  TweetCards.tsx
frontend/: pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: FeedPicker.tsx
scripts/: gen_requirements.sh
