[project]
name = "ai-newsletter"
version = "0.1.0"
description = "AI Newsletter Generator API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "openai==1.35.10",
  "feedparser==6.0.11",
  "pydantic==2.8.2",
  "httpx==0.27.0",
  "python-dateutil==2.9.0.post0",
  "starlette==0.37.2",
  "uvloop==0.19.0",
]

[tool.uv]
dev-dependencies = []


